header, footer and login components are done.

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<div>   
+    <span>
+        <h4>Elif Güney 
+            <a class="footer-link" href="https://www.bitlo.com">bitlo.com</a>
+        </h4>                  
+    </span>    
+</div>
