--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,7 +1,19 @@
-table{
-    width: 50%;    
-}
-td{
-    border: 1px solid;
-    height: 30px;
-}
+
+table {
+    margin-left: 10%;
+    width:80%;
+    border-collapse: collapse;
+  }
+  
+  th,
+  td {
+    border: 1px solid #ccc;
+    padding: 10px;
+    padding-right: 12px;
+    padding-left: 2px;
+  }
+  
+  th {
+    background-color: #f2f2f2;
+  }
+  
