Direct order page done.

--- a/src/app/components/direct-order/direct-order.component.html
+++ b/src/app/components/direct-order/direct-order.component.html
@@ -1,1 +1,25 @@
-<p>direct-order works!</p>
+<table>
+    <thead>
+      <tr >
+        <th>marketCode</th>
+        <th>orderSide </th>
+        <th>orderDate</th>
+        <th>price</th>
+        <th>orderAmount </th>
+        <th>fillAmount</th>
+        <th>Fill Percent</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let order of orderData">            
+        <td>{{ order.marketCode }}</td>
+        <td>{{ order.orderSide }}</td>
+        <td>{{ order.orderDate }}</td>
+        <td>{{ order.price | number }}</td>
+        <td>{{ order.orderAmount | number }}</td>
+        <td>{{ order.fillAmount }}</td>
+        <td> %{{ (calculateFillPercent(order.fillAmount,order.orderAmount) | number : '1.2-2' ) }} </td>
+        
+      </tr>
+    </tbody>
+  </table>
