Authentication bug fix.

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div>   
     <span>
-        <h4>Elif Güney 
+        <h4><a [routerLink]="['/profile']" >Elif Güney  </a>
             <a class="footer-link" href="https://www.bitlo.com">bitlo.com</a>
         </h4>                  
     </span>    
