CSS added to project. Bug fix in merket page.

--- a/src/app/components/balances/balances.component.html
+++ b/src/app/components/balances/balances.component.html
@@ -1,5 +1,5 @@
 <label>
-    <input type="checkbox"  [(ngModel)]="showLowBalances"  checked (change)="filterBalances()"> Düşük Bakiyeleri Göster / Gizle
+    <input type="checkbox"  [(ngModel)]="showLowBalances"  checked (change)="filterBalances()"> Hide Low Balances
   </label>
 <table>
     <thead>
