--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,8 +1,11 @@
 <div class="container">
-    <div class="main-page">
-        <p>Elif Güney</p>
-        <p>0505 324 17 48</p>
-        <p><a href="https://github.com/elifguney7/angular-market-project">Github Project Link</a></p>
-        <p><a href="https://angular-market-project.vercel.app/">Project link</a></p>
+    <div class="main-page_card">
+        <div class="text">
+            <p>Elif Güney</p>
+            <p>0505 324 17 48</p>
+            <p><a href="https://github.com/elifguney7/angular-market-project">Github Project Link</a></p>
+            <p><a href="https://angular-market-project.vercel.app/">Project link</a></p>
+        </div>
+        
     </div>
 </div>
