--- a/src/app/components/direct-order/direct-order.component.css
+++ b/src/app/components/direct-order/direct-order.component.css
@@ -3,6 +3,9 @@ table {
     margin-left: 10%;
     width:80%;
     border-collapse: collapse;
+    margin-top: 1%;
+    margin-bottom: 2%;
+    
   }
   
   th,
@@ -10,7 +13,7 @@ table {
     border: 1px solid #ccc;
     padding: 10px;
     padding-right: 12px;
-    padding-left: 2px;
+    padding-left:5px;
   }
   
   th {
