--- a/src/app/components/markets/markets.component.css
+++ b/src/app/components/markets/markets.component.css
@@ -1,18 +1,23 @@
 /* markets.component.css */
-
+*{
+  font-size: 16px;
+}
 
 table {
     margin-left: 10%;
+    margin-bottom: 1%;
+    margin-top: 1%;
     width:80%;
     border-collapse: collapse;
-  }
+    font-size: 16px;
+}
   
   th,
   td {
     border: 1px solid #ccc;
     padding: 10px;
     padding-right: 12px;
-    padding-left: 2px;
+    padding-left: 12px;
   }
   
   th {
