--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,19 +1,54 @@
+.profile_title{
+  padding-left: 2%;
+  padding-top: 1%;
+}
 
 table {
-    margin-left: 10%;
-    width:80%;
-    border-collapse: collapse;
-  }
+  margin-left: 10%;
+  margin-bottom: 3%;
+  width:80%;
+  border-collapse: collapse;
+  font-weight: 300;
+}
   
-  th,
-  td {
-    border: 1px solid #ccc;
-    padding: 10px;
-    padding-right: 12px;
-    padding-left: 2px;
-  }
+td{
+  border: 1px solid #c3c3c3;
+  padding: 10px;
+  padding-right: 12px;
+  padding-left: 12px;
+}
+
+table tr td:first-child {
+  background-color: #f2f2f2;
+}
+
+
+.market_button{
+  font-family: 'Roboto';
+  padding: 1%;
+  font-weight: 400;  
+  font-size: 14px;
+  border-radius: 5px;
+  border: none;
+  background-color: #0a2363;
+  color: #fff;
+  align-items: center;
+  margin-bottom: 2%;
+  margin-left: 0.7%;
+
+}
+
+.market_button_right{  
+  font-family: 'Roboto';
+  padding: 1%;
+  font-weight: 400;  
+  font-size: 14px;
+  border-radius: 5px;
+  border: none;
+  background-color: #0a2363;
+  color: #fff;
+  align-items: center;
+  margin-bottom: 2%;
+  margin-left: 76%;
   
-  th {
-    background-color: #f2f2f2;
-  }
-  
+}
