--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,4 @@
-<div>   
-    <span>
-        <h4><a [routerLink]="['/profile']" >Elif Güney  </a>
-            <a class="footer-link" href="https://www.bitlo.com">bitlo.com</a>
-        </h4>                  
-    </span>    
+<div class="footer-cont">       
+        <p><a [routerLink]="['/profile']" >Elif Güney</a> </p> 
+        <p><a  href="https://www.bitlo.com">bitlo.com</a> </p>          
 </div>
