--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,9 +1,10 @@
 *{    
+    display: block;
     background-color: #0a2363;
     color: #ffffff;
     padding: 0.5%;
-   
 }
+
 
 .header-buttons{
     display: flex;    
