--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,3 +1,10 @@
+.profile-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 71vh;
+}
+
 .profile_title{
   padding-left: 2%;
   padding-top: 1%;
