--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,40 +1,41 @@
-<div>
+<div class="profile-container">
     <div class="login-error">{{ authError }}</div>
-
     <div class="profile_title">
       <h2>Welcome to Your Profile</h2>
     </div>
 
-<table>
-  
-  <tr>
-    <td>First Name</td>
-    <td>{{ profileData.firstName }}</td>
-  </tr>
-  <tr>
-    <td>Last Name</td>
-    <td>{{ profileData.lastName }}</td>
-  </tr>
-  <tr>
-    <td>Date of Birth</td>
-    <td>{{ formatDate(profileData.dateOfBirth)}}</td>
-  </tr>
-  <tr>
-    <td>Phone Number</td>
-    <td>{{ formatPhoneNumber(profileData.phoneNumber) }}</td>
-  </tr>
-  <tr>
-    <td>Identity Number</td>
-    <td>{{ profileData.identityNumber }}</td>
-  </tr>
-  <tr>
-    <td>Update Date</td>
-    <td>{{ formatUpdateDate(profileData.updateDate) }}</td>
-  </tr>
-</table>  
-  <button class="market_button" [routerLink]="['balances']">Balances</button>
-  <button class="market_button" [routerLink]="['direct-orders']">Direct Orders</button>
-  <button class="market_button_right" [routerLink]="['/markets']" >Market -></button>
-<router-outlet></router-outlet>
+  <table>    
+    <tr>
+      <td>First Name</td>
+      <td>{{ profileData.firstName }}</td>
+    </tr>    
+    <tr>
+      <td>Last Name</td>
+      <td>{{ profileData.lastName }}</td>
+    </tr>
+    <tr>
+      <td>Date of Birth</td>
+      <td>{{ formatDate(profileData.dateOfBirth)}}</td>
+    </tr>
+    <tr>
+      <td>Phone Number</td>
+      <td>{{ formatPhoneNumber(profileData.phoneNumber) }}</td>
+    </tr>
+    <tr>
+      <td>Identity Number</td>
+      <td>{{ profileData.identityNumber }}</td>
+    </tr>
+    <tr>
+      <td>Update Date</td>
+      <td>{{ formatUpdateDate(profileData.updateDate) }}</td>
+    </tr>
+  </table>  
+  <div class="profile-button-container">
+    <button class="market_button" [routerLink]="['balances']">Balances</button>
+    <button class="market_button" [routerLink]="['direct-orders']">Direct Orders</button>
+    <button class="market_button_right" [routerLink]="['/markets']" >Market -></button>
+  </div>
+
+  <router-outlet></router-outlet>
       
 </div>
