--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,24 @@
-html, body { 
+/* html, body { 
     height: 100%; 
     background-color: #f6f6f6;
 }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
 
+body {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    margin: 0;
+  }
+  
+  app-header, app-footer {
+    flex-shrink: 0;
+    
+  }
+  
+  router-outlet {
+    flex-grow: 1;
+    overflow-y: auto; /* Add scroll if content is taller than the viewport */
+  }
+  
+  
