--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div >
+<div class="header-cont">
     <img src="assets/bitlo-logo.png" [routerLink] ="['/']" alt="logo" style="width:100px;height:60px;">
     <div class = "header-buttons">
         <button *ngIf="!loggedIn" mat-raised-button [routerLink]="['/login']">Login</button>
