--- a/src/styles.css
+++ b/src/styles.css
@@ -1,24 +1,38 @@
-/* html, body { 
-    height: 100%; 
-    background-color: #f6f6f6;
-}
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
 
 body {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    margin: 0;
-  }
-  
-  app-header, app-footer {
-    flex-shrink: 0;
-    
-  }
-  
-  router-outlet {
-    flex-grow: 1;
-    overflow-y: auto; /* Add scroll if content is taller than the viewport */
-  }
-  
-  
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+app-root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+app-header {
+  flex-shrink: 0;
+  height: 100px; /* Set the height of your sticky header */
+  position: sticky;
+  top: 0;
+  color: #fff;
+  z-index: 100; /* Ensure the header stays above other elements */
+}
+
+router-outlet {
+  flex-grow: 1;
+  overflow-y: auto; /* Add scroll if content is taller than the viewport */
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Adjust alignment as needed */
+}
+
+app-footer {
+  flex-shrink: 0;
+  height: 50px; /* Set the height of your footer */
+}
