--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -13,6 +13,10 @@
     padding: 0 2rem;
 }
 
+.header-cont img {
+    cursor: pointer;
+}
+
 .header-buttons{
     display: flex;    
     justify-content: flex-end;
