--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<app-content-container >
+    <router-outlet></router-outlet>
+</app-content-container>
 <app-footer></app-footer>
