--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,61 +1,90 @@
+*{
+  box-sizing: border-box;
+}
+
 .profile-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 71vh;
 }
 
-.profile_title{
-  padding-left: 2%;
-  padding-top: 1%;
+.profile_title {
+  padding-bottom: 2rem;
+}
+
+.profile_title h2 {
+  font-size: 24px;
 }
 
 table {
-  margin-left: 10%;
-  margin-bottom: 3%;
-  width:80%;
-  border-collapse: collapse;
-  font-weight: 300;
+  border-collapse: separate;
+  border-spacing: 0;
+  overflow: hidden;
+  margin-bottom: 4%;
+  width:90%;
+  font-size: 16px;
 }
-  
-td{
-  border: 1px solid #c3c3c3;
-  padding: 10px;
-  padding-right: 12px;
-  padding-left: 12px;
+
+tr {
+  height: 50px;
 }
 
 table tr td:first-child {
-  background-color: #f2f2f2;
+  background-color: var(--color-light-gray);
+  font-weight: 500;
+  color: #fff;
+} 
+
+th, td {
+  padding: 10px;
+  height: 40px;  
+  border: 1.5px solid #c3c3c3;
+}
+
+table tr td:first-child {
+  background-color: var(--color-light-gray);
+  font-weight: 500;
+} 
+
+tr:first-child td:first-child {
+  border-top-left-radius: 10px;
+}
+tr:first-child td:last-child {
+  border-top-right-radius: 10px;
+}
+tr:last-child td:first-child {
+  border-bottom-left-radius: 10px;
+}
+tr:last-child td:last-child {
+  border-bottom-right-radius: 10px;
 }
 
 
-.market_button{
+.profile-button-container {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.market_button_left-container button{
+  margin-right: 1.5rem;
+}
+
+.profile-button-container button {
   font-family: 'Roboto';
-  padding: 1%;
-  font-weight: 400;  
-  font-size: 14px;
-  border-radius: 5px;
-  border: none;
   background-color: #0a2363;
   color: #fff;
-  align-items: center;
-  margin-bottom: 2%;
-  margin-left: 0.7%;
-
-}
-
-.market_button_right{  
-  font-family: 'Roboto';
-  padding: 1%;
-  font-weight: 400;  
-  font-size: 14px;
-  border-radius: 5px;
   border: none;
-  background-color: #0a2363;
-  color: #fff;
-  align-items: center;
-  margin-bottom: 2%;
-  margin-left: 76%;
-  
+  font-weight: 400;  
+  font-size: 16px;
+  border-radius: 5px;
+  padding: 0.75rem;
+  min-width: 200px;
+  cursor: pointer;
 }
+
+
+
+
+
