--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -17,7 +17,7 @@
         </ng-template>                       
       </div>
       <div class="error-message" *ngIf="loginError">{{ loginError }}</div>
-      <button mat-raised-button color="primary" (click)="submitClicked = true">Login</button>
+      <button color="primary" (click)="submitClicked = true">Login</button>
     </form>
   </div>
 </div>
