--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -36,7 +36,7 @@
       <button [routerLink]="['balances']">Balances</button>
       <button [routerLink]="['direct-orders']">Direct Orders</button>
     </div>
-    <button [routerLink]="['/markets']" >Market -></button>
+    <button class="button_navy" [routerLink]="['/markets']" >Market -></button>
   </div>
 
   <router-outlet></router-outlet>
