--- a/src/app/components/balances/balances.component.css
+++ b/src/app/components/balances/balances.component.css
@@ -3,12 +3,9 @@ table {
   border-collapse: separate;
   border-spacing: 0;
   overflow: hidden;
-  margin-bottom: 4%;
   width:90%;
   font-size: 16px;
-  margin-bottom: 4%;
-  margin-top: 3rem;
-
+  margin-top: 2rem;
 }
 
 tr {
@@ -38,3 +35,10 @@ tr:last-child td:first-child {
 tr:last-child td:last-child {
   border-bottom-right-radius: 10px;
 }
+
+.checkbox_balances {
+  margin-top: 1rem;
+  font-size: 18px;
+
+}
+
