--- a/src/app/components/balances/balances.component.html
+++ b/src/app/components/balances/balances.component.html
@@ -1,6 +1,4 @@
-<label>
-    <input type="checkbox"  [(ngModel)]="showLowBalances"  checked (change)="filterBalances()"> Hide Low Balances
-  </label>
+
 <table>
     <thead>
       <tr *ngIf="filteredBalances.length > 0">
@@ -17,3 +15,6 @@
       </tr>
     </tbody>
   </table>
+  <div class="checkbox_balances">
+    <input type="checkbox"  [(ngModel)]="showLowBalances"  checked (change)="filterBalances()"> Hide Low Balances
+</div>
