--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,5 @@
 *{    
     display: block;
-    background-color: #0a2363;
 }
 
 .header-cont {
@@ -13,6 +12,22 @@
     padding: 0 2rem;
 }
 
+.header-navs {
+    width: 75%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.header-navs a {
+    font-size: 18px;
+    font-weight: 500;
+    font-family: var(--font-family);
+    text-decoration: none;
+    color: #ffffff;
+    margin-left: 5rem;
+}
+
 .header-cont img {
     cursor: pointer;
 }
@@ -20,4 +35,14 @@
 .header-buttons{
     display: flex;    
     justify-content: flex-end;
+}
+
+button {
+    font-family: 'Roboto';
+    border: none;
+    font-size: 16px;
+    border-radius: 5px;
+    padding: 0.75rem;
+    min-width: 100px;
+    cursor: pointer;
 }
