--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -9,14 +9,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #0a2363;
+  background: var(--gradient-reverse);
   color: #f6f6f6;
   font-size: 18px;
   text-align: center;
-  width: 25%;
+  width: 50%;
   height: 25%;
-  border-radius: 13px;
-  padding: 22px 1px ;
+  border-radius: 8px;
+  box-shadow: -25px 30px 30px 3px rgba(0, 0, 0, 0.667);
+    padding: 22px 1px ;
 }
 
 .text {
