--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,9 @@
 :root {
   --font-family: 'Manrope', sans-serif;
 
-  --gradient-text: linear-gradient(89.97deg, #AE67FA 1.84%, #F49867 102.67%);
-  --gradient-bar: linear-gradient(103.22deg, #AE67FA -13.86%, #F49867 99.55%);
+  --gradient-bar: linear-gradient(90deg, #132D46 0%, #191E29 100%);
+  --gradient-reverse: linear-gradient(90deg, rgba(19, 45, 70, 1) 0%, rgba(25, 30, 41, 1) 100%);
+  
   
   --color-bg-gray: #191E29;
   --color-bg-navy : #132D46;
@@ -20,8 +21,14 @@ body {
   min-height: 100vh;
   margin: 0;
   font-family: var(--font-family);
-  background-color: var(--color-bg-gray);
+  background: var(--gradient-bar);
   color: var(--color-text);
+}
+
+button {
+  background: var(--color-bg-gray);
+  color: var(--color-text);
+  font-weight: 500;
 }
 
 app-root {
@@ -37,6 +44,7 @@ app-header {
   height: 100px; /* Set the height of your sticky header */
   position: sticky;
   top: 0;
+  background: var(--color-bg-navy);
   color: #fff;
   z-index: 100; /* Ensure the header stays above other elements */
 }
@@ -48,6 +56,7 @@ app-content-container {
   align-items: center; 
   justify-content: center;
   overflow-y: auto; 
+  
 }
 
 router-outlet {
